# Self-Driving-Car-2022

./: .gitignore  docker_run.sh  env.sh  submit_2.csv  submit_3.csv
best_result/: results_1.csv
devel/: .catkin
devel/lib/localization/: pub_map
devel/lib/map_tile_loader/: map_publisher  test_node
devel/lib/pkgconfig/: kalman_filter.pc  localization.pc  map_tile_loader.pc
devel/share/kalman_filter/cmake/: kalman_filterConfig.cmake
devel/share/localization/cmake/: localizationConfig.cmake
devel/share/map_tile_loader/cmake/: map_tile_loaderConfig.cmake
src/localization/: CMakeLists.txt  package.xml
src/localization/config/: nuscenes.rviz
src/localization/launch/: itri.launch  localization2.launch  nuscenes2.launch  nuscenes3.launch  outside_itri.launch
src/localization/results/: result_2.csv  results_1.csv  results_2.csv  results_3.csv
src/localization/src/: icp_localization2.cpp  localizer_node.cpp  localizer_node2.cpp  localizer_node3.cpp  pub_map_node.cpp
src/map_tile_loader/: CMakeLists.txt  LICENSE  README.md  package.xml
src/map_tile_loader/launch/: map.launch
src/map_tile_loader/src/: map_loader.h  map_loader.hpp  map_publisher.cpp  test_node.cpp
